src/test/ui/return/issue-86188-return-not-in-fn-body.stderr
error[E0572]: return statement outside of function body
  --> $DIR/issue-86188-return-not-in-fn-body.rs:9:10
   |
LL |       [(); return || {
   |  __________^
LL | |
LL | |
LL | |         let tx;
LL | |     }]
   | |_____^

error: failed to evaluate the given constant
  --> $DIR/issue-86188-return-not-in-fn-body.rs:9:10
   |
LL |       [(); return || {
   |  __________^
LL | |
LL | |
LL | |         let tx;
LL | |     }]
   | |_____^

error[E0572]: return statement outside of function body
  --> $DIR/issue-86188-return-not-in-fn-body.rs:21:14
   |
LL | /     fn bar() {
LL | |
LL | |         [(); return];
   | |              ^^^^^^ the return is part of this body...
LL | |
LL | |
LL | |     }
   | |_____- ...not the enclosing function body

error[E0572]: return statement outside of function body
  --> $DIR/issue-86188-return-not-in-fn-body.rs:29:14
   |
LL | /     fn foo() {
LL | |
LL | |         [(); return];
   | |              ^^^^^^ the return is part of this body...
LL | |
LL | |
LL | |     }
   | |_____- ...not the enclosing function body

error[E0572]: return statement outside of function body
  --> $DIR/issue-86188-return-not-in-fn-body.rs:37:10
   |
LL |  / fn main() {
LL |  |
LL |  |     [(); return || {
   |  |__________^
LL | ||
LL | ||
LL | ||         let tx;
LL | ||     }];
   | ||_____^ the return is part of this body...
LL |  | }
   |  |_- ...not the enclosing function body

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0572`.
